# summer-c

./: .gitignore  README.md
week10/: CMakeLists.txt
week10/include/: employee.h  stats.h  taxes.h
week10/src/: employee.c  main.c  stats.c
week2/: CMakeLists.txt
week2/src/: main.c
week3/: CMakeLists.txt
week3/src/: main.c
week4-5/: CMakeLists.txt
week4-5/src/: main.c
week4/src/: main.c
week6/: CMakeLists.txt
week6/include/: employee.h
week6/src/: employee.c  main.c
week7/: CMakeLists.txt
week7/include/: employee.h
week7/src/: employee.c  main.c
week8/: CMakeLists.txt
week8/include/: employee.h  stats.h  taxes.h
week8/src/: employee.c  main.c  stats.c
week9/: CMakeLists.txt
week9/include/: employee.h  stats.h  taxes.h
week9/src/: employee.c  main.c  stats.c
